- fixed listbox Shift + Ctrl + Home so that active option is also selected - prevent space from scrolling even in single select listbox - included `list-style-position: inside` in listbox SASS - updated `listbox-page.js` to demonstrate adding a new option  #18

--- a/src/asce/components/listbox/_listbox.scss
+++ b/src/asce/components/listbox/_listbox.scss
@@ -1,10 +1,11 @@
 /* VARIABLES */
-$asce-listbox-selected-bg-color: #ccc !default;
-$asce-listbox-active-outline-color: 2px dotted #000 !default;
+$asce-listbox-active-option-outline: 2px dotted #000 !default;
+$asce-listbox-selected-option-bg-color: #ccc !default;
 
 
 /* STYLES */
 [asce-listbox-list] {
+  list-style-position: inside;
   overflow-y: auto;
 }
 
@@ -12,10 +13,10 @@ $asce-listbox-active-outline-color: 2px dotted #000 !default;
   user-select: none;
 
   &[aria-selected="true"] {
-    background: $asce-listbox-selected-bg-color;
+    background: $asce-listbox-selected-option-bg-color;
   }
 }
 
 [asce-listbox-active-option] {
-  outline: $asce-listbox-active-outline-color;
+  outline: $asce-listbox-active-option-outline;
 }
